# haskell-graphql-schema

./: graphql-schema-haskell.cabal  graphql-schema.cabal  haskell-graphql-schema.cabal  stack.yaml
app/: Main.hs
src/Data/GraphQL/: Schema.hs
src/Data/GraphQL/XXX/: Query.hs  Schema.hs
src/Data/GraphQL/XXX/Query/: AST.hs  Lexer.hs  Parser.hs  Pretty.hs  Token.hs
src/Data/GraphQL/XXX/Schema/: AST.hs  Info.hs  Lexer.hs  Parser.hs  Pretty.hs  Token.hs
