name:                haskell-graphql-schema
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/uebayasi/haskell-graphql-schema#readme
license:             BSD3
license-file:        LICENSE
author:              Masao Uebayashi
maintainer:          uebayasi@gmail.com
copyright:           2016 Masao Uebayashi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.GraphQL.Schema
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable haskell-graphql-schema-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , haskell-graphql-schema
  default-language:    Haskell2010

test-suite haskell-graphql-schema-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-graphql-schema
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/uebayasi/haskell-graphql-schema
